--- a/krlist.yaml
+++ b/krlist.yaml
@@ -3,4 +3,4 @@ payload:
   - DOMAIN-SUFFIX,xvideos.com
   - DOMAIN-SUFFIX,pornhub.com
   - DOMAIN,ecchi.iwara.tv
-  - DOMAIK,danbooru.donmai.us
+  - DOMAIN,danbooru.donmai.us
